# dataformats

./: CMakeLists.txt
docs/: MagicBytes.md
include/dataformats/: Exceptions.hpp  Fragment.hpp  FragmentHeader.hpp  Issues.hpp  MagicBytes.hpp  TriggerRecordHeader.hpp  TriggerRecordHeaderData.hpp  Types.hpp
include/dataformats/pacman/: PACMANFrame.hpp
include/dataformats/ssp/: SSPTypes.hpp  SSPWaveform.hpp
include/dataformats/tp/: TPFrame.hpp
include/dataformats/trigger/: TriggerPrimitivesFragment.hpp
include/dataformats/wib/: RawWibTp.hpp  WIBFrame.hpp
unittest/: ComponentRequest_test.cxx  FragmentHeader_test.cxx  Fragment_test.cxx  GeoID_test.cxx  MagicBytes_test.cxx  TriggerRecordHeader_test.cxx
